Fixed dislay of masthead title on iOS.

--- a/_sass/application/_modules.scss
+++ b/_sass/application/_modules.scss
@@ -76,6 +76,7 @@
   .masthead-title
   {
     color: white;
+    display: block;
     font-size: modular-scale(1);
     font-style: italic;
     line-height: 1;
